--- a/react-d3/src/App.css
+++ b/react-d3/src/App.css
@@ -1,1 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap');
+.App{
+    font-family: 'Viaoda Libre', cursive !important;
+}
 
